# data-science-toolbox

./: .env.template  .gitignore  DESCRIPTION  Dockerfile  Makefile  README.md  config.mk  docker-compose.yml  pyproject.toml  setup.cfg  shell_functions.sh
notebooks/: .Rprofile  playground-R.ipynb  playground-python.ipynb
