[metadata]
name = data-science-toolbox
author = Federico von Bergen
author_email = federicovonbergen@gmail.com
description = Data Science Toolbox
long_description = file: README.md
url = 

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    black[jupyter]
    jupyter_contrib_nbextensions
    nbconvert # jupyter notebook converter
    notebook # jupyter notebook
